[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtam"
version = "1.0.0"
description = "Q-transform with Amplitude Modulation (QTAM) for PyTorch"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Lorenzo Asprea", email = "lorenzo.asprea@to.infn.it"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "torchaudio",
    "gwpy",
    "gwosc",
]

[project.urls]
Homepage = "https://github.com/dottormale/Qtransform_torch"
Repository = "https://github.com/dottormale/Qtransform_torch"

[tool.setuptools]
packages = ["QTAM"]
include-package-data = true

[tool.setuptools.package-data]
QTAM = ["*.ipynb", "*.pkl"]
